services/orders-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-api
  namespace: vnv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-api
  template:
    metadata:
      labels:
        app: orders-api
    spec:
      containers:
        - name: orders-api
          image: ghcr.io/therealdavidbour/orders-api:fb3bed97fe6a4095a5ce01ffc94d612868eea0fd
          ports:
            - containerPort: 8001
