services/orders-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-api
  namespace: vnv
spec:
  selector:
    app: orders-api
  ports:
    - port: 80
      targetPort: 8001
