services/orders-api/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orders-api
  namespace: vnv
  annotations:
    cert-manager.io/cluster-issuer: "k3d-ca-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - orders-api-vnv.10-0-0-200.nip.io
      secretName: orders-api-tls
  rules:
    - host: orders-api-vnv.10-0-0-200.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orders-api
                port:
                  number: 80
